Added a second activity for camera view
Another view, designed to be a live preview of camera capture.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <string name="hello">Hello World, HoughyActivity!</string>
+    <string name="viewCaptureLabel">Please see below for your image.</string>
     <string name="app_name">Houghy</string>
 
 </resources>
